--- a/portainer-compose/nzbmedia.yml
+++ b/portainer-compose/nzbmedia.yml
@@ -28,7 +28,7 @@ services:
       - /shares/MyCloud/Movies:/MyCloud
       - /shares/MyCloud_ext/Movies:/MyCloud_ext
       - /shares/MyCloudEX2/Movies:/MyCloudEX2
-      - /shares/MyCloudEX2_2/Movies:MyCloudEX2_2
+      - /shares/MyCloudEX2_2/Movies:/MyCloudEX2_2
       - /mnt/nzb_media/Downloads:/downloads
       - /home/proxdox/nzb/radarr/config:/config
     ports:
@@ -42,7 +42,7 @@ services:
       - PGID=1000
       - TZ=America/New_York
     volumes:
-      - /shares/MyCloudEX2_2/4K_Movies:MyCloudEX2_2
+      - /shares/MyCloudEX2_2/4K_Movies:/4K_Movies
       - /mnt/nzb_media/Downloads:/downloads
       - /home/proxdox/nzb/radarr_4k/config:/config
     ports:
